www/htdocs/assets/css/main.css
/* ... */
select.textEntry,
input.textEntry,
textarea,
input[type=text],
input[type=number],
input[type=password],
select {
    border: 1px solid #a7a6aa;
    padding: 3px;
    box-sizing: border-box;
    margin: 1px 0;
    color: var(--abcd-gray-900);
    box-shadow: inset 1px 1px 3px 0.1px var(--abcd-gray-500);
    -webkit-box-shadow: inset 1px 1px 3px 0.1px var(--abcd-gray-500);
}

input[type=text],
input[type=password],
input[type=number],
textarea.par {
    -webkit-box-shadow: inset 1px 1px 3px 0.1px var(--abcd-light);
    box-shadow: inset 1px 1px 3px 0.1px var(--abcd-light);
}

input.textEntryFocus,
textarea.textEntryFocus {
    border-color: #5e88b6;
    background: var(--abcd-white);
}

/* --- Variações de Tamanho e Estilo de Inputs --- */
.textEntry {
    width: 180px;
}

input.textEntry,
textarea.textEntry {
    padding: 2px;
}

textarea.textEntry {
    height: 70px;
}

input.smallTextEntry,
textarea.smallTextEntry {
    width: 100px;
}

select.smallTextEntry {
    width: 120px;
}

input.superTextEntry,
textarea.superTextEntry,
select.superTextEntry,
input.singleTextEntry,
textarea.singleTextEntry,
select.singleTextEntry {
    height: 2.3rem;
    width: 90%;
    margin: 2px;
}

textarea.tooltip {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
}

/* --- Form structure --- */
.formContent {
    padding: 20px;
    justify-content: flex-start;
    background-color: var(--abcd-white);
    border: 1px solid var(--abcd-gray-200);
    border-radius: 0.3rem;
}

.formContent>*>.formContent,
.middle.form>*>.middle.form {
    border: none;
    border-width: 0;
    box-shadow: none;
    background: var(--abcd-white);
}

.formHead {
    background: #d8dade;
    padding: 20px;
    justify-content: flex-start;
}

.formHead h4 {
    color: #3d5d8a;
    margin: 0px 0px 15px 0px;
}

.formRow {
    width: 80%;
    margin-bottom: 10px;
}

.formRow label {
    color: #000;
    display: block;
    float: left;
    width: 30%;
}

.formRow label.inline {
    display: inline;
    float: none;
    width: auto;
}

.formRow .frDataFields {
    float: right;
    width: 67%;
}

.formRow .frDataFields .helper {
    margin-top: 10px;
    visibility: hidden;
}

.formRowFocus .frDataFields .helper {
    visibility: visible;
}

.formRow .fieldBlock {
    float: left;
    width: 33.3%;
}

.formFoot {
    padding: 16px 0;
    background: var(--abcd-light);
}

.formFoot .helper {
    float: left;
    margin-top: 10px;
    margin-left: 25px;
    margin-bottom: 10px;
    padding: 0px 10px 0px 20px;
    width: 45%;
    color: var(--abcd-white);
    border-right: 1px solid #8da2c1;
}

.formFoot .pagination {
    float: right;
    width: 40%;
    margin: 10px 15px 0px 0px;
}

.group-fields {
    background-color: var(--abcd-white);
    border: 1px solid var(--abcd-light);
    box-sizing: border-box;
    padding: 10px 15px;
    margin: 10px 0;
}

.panel table    {
    width: 100%;
}


/* ==========================================================================
   3. UI COMPONENTS
   ========================================================================== */

/* --- 3.1. Buttons --- */

/* Default button (Classic) */
a.defaultButton {
    text-decoration: none;
    color: var(--abcd-white);
    display: block;
    float: left;
    width: 200px;
    height: 32px;
    margin-right: 1px;
    text-align: left;
}

a.defaultButton img {
    width: 32px;
    height: 32px;
    vertical-align: middle;
    margin-right: 7px;
    float: left;
}

a.defaultButton:hover img {
    background-color: #4E617C;
}

a.defaultButton span {
    cursor: pointer;
    display: inline-block;
    vertical-align: middle;
    width: 150px;
    padding: 0px;
    float: left;
}

a.defaultButton strong {
    display: block;
}

a.multiLine span {
    padding-top: 5px;
}

body:first-of-type a.multiLine span {
    padding-top: 10px;
}

/* Menu button (Homepage) */
a.menuButton {
    text-align: right;
    border: 1px solid var(--abcd-info);
    padding: 8px;
    width: 200px;
    margin: 5px;
    transform: translateY(0);
    transition: transform 150ms, box-shadow 150ms;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
    border-radius: 0.3rem;
    display: block;
    float: left;
    height: 50px;
    margin-right: 1px;
}

a.menuButton:hover {
    background-color: var(--abcd-info);
    color: var(--abcd-blue);
    box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
    transform: translateY(-2px);
}

a.menuButton span {
    padding: 4px;
    height: 100%;
    width: 150px;
    float: left;
    text-align: left;
    margin: auto 50px;
    font-size: 85%;
    color: var(--abcd-steel-blue);
}

a.menuButton img {
    width: 40px;
    height: 40px;
    vertical-align: middle;
    margin-right: 7px;
    float: left;
}

/* Simple button and advanced submit(Base Comum) */
a.singleButton,
.submitAdvanced,
.button_browse,
a.button_browse,
.submit {
    border-radius: 3px;
    text-decoration: none;
    box-sizing: border-box;
    color: var(--abcd-white);
    cursor: pointer;
    outline: 0;
    transform: translateY(0);
    transition: transform 150ms, box-shadow 150ms;
    user-select: none;
    -webkit-user-select: none;
    touch-action: manipulation;
}

.button_browse:hover,
a.button_browse:hover,
a.singleButton:hover {
    box-shadow: rgba(0, 0, 0, .15) 0 3px 9px 0;
    transform: translateY(-2px);
}

/* Estilos Específicos */
a.singleButton {
    display: block;
    float: left;
    position: relative;
    vertical-align: middle;
    margin-right: 3px;
    padding: 10px 15px;
    background-color: var(--abcd-blue);
}

a.singleButton img {
    width: 16px;
    height: 16px;
    vertical-align: middle;
    margin-right: 2px;
}

a.singleButton span.sb_lb,
a.singleButton span.sb_rb {
    position: absolute;
    top: 0px;
    width: 2px;
    height: 22px;
}
/* ... */

